--- a/index.html
+++ b/index.html
@@ -94,9 +94,33 @@
         </div>
     </div>
 
-
-
     <script>
+        const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+        console.log(checkboxes);
+
+        let lastChecked;
+
+        function handleCheck(e) {
+            //проверяем, нажата ли shift и установлен ли check
+            let inBetween = false;
+            if (e.shiftKey && this.checked) {
+                //идём по каждому отдельному чекбоксу
+                checkboxes.forEach(checkbox => {
+                    console.log(checkbox);
+                    if (checkbox === this || checkbox === lastChecked) {
+                        inBetween = !inBetween;
+                    }
+
+                    if (inBetween) {
+                        checkbox.checked = true;
+                    }
+                });
+            }
+
+            lastChecked = this;
+        }
+
+        checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
 
     </script>
 
